<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/setings_category_first">
                <CheckBoxPreference
                        android:title="@string/setings_keep_awake"
                        android:defaultValue="true"
                        android:summary="@string/setings_keep_awake_sum"
                        android:key="checkboxKeepAwake" />
                <ListPreference
                        android:title="@string/setings_bg_list"
                        android:summary="@string/setings_bg_list_sum"
                        android:key="listPref"
                        android:defaultValue="0"
                        android:entries="@array/listDisplayWord"
                        android:entryValues="@array/listReturnValue" />
        </PreferenceCategory>
       <!--  <PreferenceCategory
                android:title="Second Category">
        <EditTextPreference
                android:name="EditText Preference"
                android:summary="This allows you to enter a string"
                android:defaultValue="Nothing"
                android:title="Edit This Text"
                android:key="editTextPref" />
        <RingtonePreference
                android:name="Ringtone Preference"
                android:summary="Select a ringtone"
                android:title="Ringtones"
                android:key="ringtonePref" />
        <PreferenceScreen
                android:key="SecondPrefScreen"
                android:title="Second PreferenceScreen"
                android:summary="This is a second PreferenceScreen">
                <EditTextPreference
                        android:name="An other EditText Preference"
                        android:summary="This is a preference in the second PreferenceScreen"
                        android:title="Edit text"
                        android:key="SecondEditTextPref" />
        </PreferenceScreen>
        <Preference
                android:title="Custom Preference"
                android:summary="This works almost like a button"
                android:key="customPref" />
        </PreferenceCategory> -->
</PreferenceScreen>